# cs-geodata-conv

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  workers.py
src/conversion/: id.py  layers.py
src/utils/: configs.py  rand_funcs.py  s3.py
src/work/: work_queue.py
