[project]
name = "cs-geodata-conv"
version = "0.1.0"
description = "A converter for CoREStack data to cloud native forms."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "rq>=2.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]
